--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,3 +1,12 @@
 .app {
   padding: 4rem;
 }
+
+.loading {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 100vw;
+  height: 100vh;
+}
