--- a/src/components/Checkbox/Checkbox.module.css
+++ b/src/components/Checkbox/Checkbox.module.css
@@ -1,12 +1,18 @@
+.container {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+}
+
 .checkbox {
   color: grey;
   height: 1.2rem;
   width: 1.2rem;
-  border: 1px solid grey;
+  border: 0.063rem solid grey;
   border-radius: 0.3rem;
   box-sizing: border-box;
   overflow: hidden;
-  padding: 2px;
+  padding: 0.125rem;
   cursor: pointer;
 }
 
