--- a/src/components/Property/Property.module.css
+++ b/src/components/Property/Property.module.css
@@ -13,4 +13,29 @@
 
 .content {
   padding: 0.5rem 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+.type {
+  color: grey;
+  font-size: 0.8rem;
+}
+
+.title {
+  font-weight: 800;
+}
+
+.numericDetails {
+  display: flex;
+  flex-direction: row;
+  gap: 2rem;
+  margin: 0.8rem;
+}
+
+.number {
+  font-weight: 800;
+  font-size: 1.2rem;
+  color: black;
 }
