--- a/src/components/MultiSelect/MultiSelect.module.css
+++ b/src/components/MultiSelect/MultiSelect.module.css
@@ -1,3 +1,7 @@
+.multiSelect {
+  position: relative;
+}
+
 .dropdownContainer {
   width: 10rem;
   border: 1px solid grey;
@@ -21,7 +25,7 @@
 }
 
 .optionList {
-  width: fit-content;
+  min-width: 12rem;
   flex-grow: 1;
   flex-shrink: 1;
   border: 1px solid grey;
@@ -31,6 +35,9 @@
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
+  position: absolute;
+  z-index: 2;
+  background-color: white;
 }
 
 .option {
