--- a/src/components/Dialog/Dialog.module.css
+++ b/src/components/Dialog/Dialog.module.css
@@ -10,7 +10,7 @@
 
 .dialog {
   width: 30rem;
-  height: 30rem;
+  /* height: 30rem; */
   background-color: white;
   padding: 0.5rem;
   display: flex;
