--- a/src/App.module.css
+++ b/src/App.module.css
@@ -10,3 +10,19 @@
   width: 100vw;
   height: 100vh;
 }
+
+.navbar {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+.logo {
+  height: 1.5rem;
+}
+
+.filters {
+  display: flex;
+  gap: 2rem;
+  margin-left: 2rem;
+}
