--- a/src/components/Dialog/Dialog.module.css
+++ b/src/components/Dialog/Dialog.module.css
@@ -1,11 +1,14 @@
 .container {
   position: absolute;
-  width: 100vw;
+  top: 0;
+  left: 0;
+  width: calc(100vw - 1.1rem);
   height: 100vh;
   background-color: rgba(0, 0, 0, 0.5);
   display: flex;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
 }
 
 .dialog {
