--- a/src/components/Dialog/Dialog.module.css
+++ b/src/components/Dialog/Dialog.module.css
@@ -13,12 +13,21 @@
 
 .dialog {
   width: 30rem;
-  /* height: 30rem; */
   background-color: white;
   padding: 0.5rem;
   display: flex;
   flex-direction: column;
   border-radius: 1rem;
+  animation: 0.2s slideInFromDown;
+}
+
+@keyframes slideInFromDown {
+  0% {
+    transform: translateY(100%);
+  }
+  100% {
+    transform: translateY(0);
+  }
 }
 
 .header {
